<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.luc11u.sam.DBAddSite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/labelAddSite"
            android:textAllCaps="true"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_addSite" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp">


        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_row="0"
            android:layout_margin="3dp"
            android:gravity="center_vertical"
            android:text="@string/label_newSiteName" />

        <EditText
            android:id="@+id/edit_newSiteName"
            android:layout_width="300dp"
            android:layout_column="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_row="0"
            android:singleLine="true" />



        <TextView
            android:id="@+id/labelChoiceCategory"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/label_newSiteCategory" />

        <Spinner
            android:id="@+id/choiceCategory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_column="1"
            android:layout_row="1" />



        <TextView
            android:id="@+id/labelPosition"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/label_newSitePosition" />

        <TextView
            android:layout_width="300dp"
            android:text="@string/label_fixedPosition"
            style="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:layout_column="1"
            android:layout_row="2"/>



        <TextView
            android:id="@+id/labelAdress"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/label_newSiteAdress" />

        <EditText
            android:id="@+id/edit_newSiteAdress"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_column="1"
            android:layout_row="3"
            android:singleLine="true" />



        <TextView
            android:id="@+id/labelSummary"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/label_newSiteSummary" />

        <EditText
            android:id="@+id/edit_newSiteSummary"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_column="1"
            android:layout_row="4"
            android:singleLine="false" />

        <TextView
            android:id="@+id/labelFieldsRequired"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:textStyle="italic"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/label_newSiteRequired" />

        <Button
            android:id="@+id/button_addNewSite"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/button_addNewSite"
            />


    </GridLayout>



</LinearLayout>
